--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "react-course",
+  "name": "delicious",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -34,5 +36,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
+    "@splidejs/react-splide": "^0.7.12",
+    "framer-motion": "^10.12.16",
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.11.2",
+    "styled-component": "^2.8.0"
   }
 }
